--- a/client/src/css/style.scss
+++ b/client/src/css/style.scss
@@ -205,5 +205,9 @@ html, body {
 }
 
 .material-icons:hover {
-    background-color: $sidebar-background-color
+    background-color: darken($background-color, 50%);
+}
+
+.sidebar-buttons:hover {
+    background-color: darken($background-color, 50%);
 }
