--- a/client/src/css/style.scss
+++ b/client/src/css/style.scss
@@ -171,6 +171,10 @@ html, body {
     color: var(--light-gray);
 }
 
+.table-text:hover {
+    background-color: darken($background-color, 50%);
+}
+
 .modal-header {
     color: $text-color;
     font-size: 28px;
