--- a/client/src/css/style.scss
+++ b/client/src/css/style.scss
@@ -61,6 +61,14 @@ html, body {
     color: $primary-color;
 }
 
+.assigned-to-completed {
+    color: var(--warm-black);
+}
+
+.assigned-to-not-completed {
+    color: #dc143c;
+}
+
 .list-item-active {
     background-color: var(--deep-blue);
 }
